--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ branches:
 before_script:
       - npm install -g npm
       - npm install -g ionic
+      - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+      - chmod +x ./cc-test-reporter
+      - ./cc-test-reporter before-build
 script:
       - ionic build browser --prod
 deploy:
@@ -19,3 +22,5 @@ deploy:
       on:
             branch: master
             local_dir: www
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
