--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "core-js": "^2.5.4",
     "ionic-cache": "^4.0.1",
     "rxjs": "~6.3.3",
+    "tar": "^4.4.8",
     "timers": "^0.1.1",
     "zone.js": "~0.8.29"
   },
