--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ env:
     - CC_TEST_REPORTER_ID=92d69553e067a327c9a402cd0b1b4e12d5bfdf8c48a7801e7ad6b41b920e9632
 language: node_js
 node_js: "10.7.0"
+addons:
+  chrome: stable
 branches:
       only:
       - master
