--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ branches:
       only:
       - master
 before_script:
+      - export CHROME_BIN=chromium-browser
       - npm install -g ionic
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - chmod +x ./cc-test-reporter
