--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ branches:
       - master
 
 before_script:
+      - npm install -g ionic
       - export CHROME_BIN=chromium-browser
       - export DISPLAY=:99.0
       - sh -e /etc/init.d/xvfb start
-      # - npm install -g ionic
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - chmod +x ./cc-test-reporter
       - ./cc-test-reporter before-build
