--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
       - ./cc-test-reporter before-build
 
 script:
-      - ng test
+      - ionic test
 
 deploy:
       provider: app
