--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,25 @@ branches:
       - master
 
 before_script:
+      #- npm install -g ionic
       - export CHROME_BIN=chromium-browser
       - export DISPLAY=:99.0
       - sh -e /etc/init.d/xvfb start
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - chmod +x ./cc-test-reporter
       - ./cc-test-reporter before-build
+
 script:
       - ng test --watch=false --codeCoverage=true
+
+deploy:
+      provider: app
+      skip-cleanup: true
+      github-token: $GITHUB_TOKEN
+      keep-history: true
+      on:
+            branch: master
+      local_dir: www
+
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
