--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,20 +1,19 @@
 version: "2"
 
-checks:
-  file-lines:
-    enabled: false
-  method-complexity:
-    config:
-      threshold: 8
-
 plugins:
+  nodesecurity:
+    enabled: true
+  git-legal:
+   enabled: true
+  fixme:
+    enabled: true
   tslint:
     enabled: true
     config: tslint.json
   duplication:
     enabled: true
     config:
-        count_threshold: 3
+        count_threshold: 2
 
 exclude_patterns:
 - config/**/*
