--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@ionic-native/app-availability": "^5.5.0",
-    "@ionic-native/app-version": "^5.5.0",
-    "@ionic-native/calendar": "^5.5.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/device": "^5.5.0",
-    "@ionic-native/diagnostic": "^5.5.0",
-    "@ionic-native/geolocation": "^5.5.0",
+    "@ionic-native/app-availability": "^5.6.1",
+    "@ionic-native/app-version": "^5.6.1",
+    "@ionic-native/calendar": "^5.6.1",
+    "@ionic-native/core": "^5.6.1",
+    "@ionic-native/device": "^5.6.1",
+    "@ionic-native/diagnostic": "^5.6.1",
+    "@ionic-native/geolocation": "^5.6.1",
     "@ionic-native/google-maps": "^5.5.0",
-    "@ionic-native/in-app-browser": "^5.5.0",
-    "@ionic-native/market": "^5.5.0",
-    "@ionic-native/native-geocoder": "^5.5.0",
-    "@ionic-native/network": "^5.5.0",
-    "@ionic-native/secure-storage": "^5.5.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/sqlite": "^5.5.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic-native/toast": "^5.5.0",
+    "@ionic-native/in-app-browser": "^5.6.1",
+    "@ionic-native/market": "^5.6.1",
+    "@ionic-native/native-geocoder": "^5.6.1",
+    "@ionic-native/network": "^5.6.1",
+    "@ionic-native/secure-storage": "^5.6.1",
+    "@ionic-native/splash-screen": "^5.6.1",
+    "@ionic-native/sqlite": "^5.6.1",
+    "@ionic-native/status-bar": "^5.6.1",
+    "@ionic-native/toast": "^5.6.1",
     "@ionic/angular": "^4.4.2",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "core-js": "^2.6.8",
+    "core-js": "^2.6.9",
     "ionic-cache": "^4.0.1",
     "ionicons": "^4.5.8",
     "rxjs": "~6.3.3",
@@ -61,9 +61,9 @@
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.4.0",
     "@ionic/lab": "1.0.24",
-    "@types/jasmine": "^2.8.8",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.14.2",
+    "@types/node": "^10.14.8",
     "codelyzer": "~4.5.0",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
