--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "core-js": "^2.6.9",
     "ionic-cache": "^4.0.1",
     "ionicons": "^4.5.8",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.5.2",
     "tar": "^4.4.10",
     "timers": "^0.1.1",
     "zone.js": "~0.8.29"
@@ -59,7 +59,7 @@
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.4.0",
+    "@ionic/angular-toolkit": "^1.5.1",
     "@ionic/lab": "1.0.24",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
