--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
       - ./cc-test-reporter before-build
 
 script:
-      - ng test --watch=false --codeCoverage=true
+      - npm run ci
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
