--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test:once": "ng test --watch=false",
+    "test:onceAndCoverage": "ng test --watch=false --codeCoverage=true",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "ci": "npm run test:onceAndCoverage && npm run e2e"
   },
   "private": true,
   "dependencies": {
