--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -14,6 +14,9 @@ plugins:
     enabled: true
     config:
         count_threshold: 2
+  similar-code:
+    config:
+      threshold: 12
 
 exclude_patterns:
 - config/**/*
