--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.6.9",
     "ionic-cache": "^4.0.1",
-    "leaflet": "^1.5.1",
     "ionicons": "^4.5.8",
+    "leaflet": "^1.5.1",
     "rxjs": "^6.5.2",
+    "stream": "0.0.2",
     "tar": "^4.4.10",
     "timers": "^0.1.1",
     "zone.js": "^0.8.29"
