--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "cordova-android": "^8.0.0",
+    "cordova-plugin-appavailability": "^0.4.2",
+    "cordova-plugin-market": "^1.2.0",
     "core-js": "^2.6.9",
     "ionic-cache": "^4.0.1",
     "ionicons": "^4.6.1",
@@ -78,7 +81,28 @@
     "protractor": "~5.4.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-appavailability": {},
+      "cordova-plugin-market": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
