--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "cordova-android": "^8.0.0",
+    "cordova-ios": "5.0.1",
     "cordova-plugin-appavailability": "^0.4.2",
     "cordova-plugin-market": "^1.2.0",
     "core-js": "^2.6.9",
@@ -71,6 +72,12 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.14.10",
     "codelyzer": "~4.5.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.1.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
@@ -81,13 +88,7 @@
     "protractor": "~5.4.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
-    "typescript": "~3.1.6",
-    "cordova-plugin-whitelist": "1.3.3",
-    "cordova-plugin-statusbar": "2.4.2",
-    "cordova-plugin-device": "2.0.2",
-    "cordova-plugin-splashscreen": "5.0.2",
-    "cordova-plugin-ionic-webview": "^4.0.0",
-    "cordova-plugin-ionic-keyboard": "^2.0.5"
+    "typescript": "~3.1.6"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -102,7 +103,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
