--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ env:
 
 language: node_js
 node_js: "10.7.0"
+dist: xenial
+services:
+  - xvfb
 addons:
   chrome: stable
 
@@ -12,9 +15,8 @@ branches:
       - master
 
 before_script:
-      - export CHROME_BIN=chromium-browser
+      - npm audit fix --force
       - export DISPLAY=:99.0
-      - sh -e /etc/init.d/xvfb start
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - chmod +x ./cc-test-reporter
       - ./cc-test-reporter before-build
