--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "stream": "0.0.2",
     "tar": "^4.4.10",
     "timers": "^0.1.1",
-    "zone.js": "^0.10.2"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.12.3",
@@ -65,8 +65,8 @@
     "@angular-devkit/core": "^7.3.9",
     "@angular-devkit/schematics": "^7.3.9",
     "@angular/cli": "~7.3.1",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
+    "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "^1.5.1",
     "@ionic/lab": "1.0.24",
@@ -74,7 +74,7 @@
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.14.17",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^4.5.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.1",
@@ -84,7 +84,7 @@
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.3.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
@@ -93,7 +93,7 @@
     "protractor-http-mock": "^0.10.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.19.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.2.4"
   },
   "description": "An Ionic project",
   "cordova": {
