--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@ionic-native/sqlite": "^5.13.0",
     "@ionic-native/status-bar": "^5.13.0",
     "@ionic-native/toast": "^5.13.0",
-    "@ionic/angular": "~4.8.1",
+    "@ionic/angular": "^4.9.0",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
