--- a/.coveragerc
+++ b/.coveragerc
@@ -15,9 +15,9 @@ omit =
     www/
     src/assets/*
     resources/*
-    **/*.spec.ts
-    /src/polyfills.ts
-    /src/test.ts
+    "**/*.spec.ts"
+    src/polyfills.ts
+    src/test.ts
 
 [report]
 fail_under = 100
