--- a/.coveragerc
+++ b/.coveragerc
@@ -15,9 +15,13 @@ omit =
     www/
     src/assets/*
     resources/*
-    "**/*.spec.ts"
+    **/*.spec.ts
     src/polyfills.ts
     src/test.ts
+    e2e/*
+    **/*.js
+    **/*.json
+    **/*.po.ts
 
 [report]
 fail_under = 100
