--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "@ionic/lab": "1.0.24",
     "@ionic/v4-migration-tslint": "^1.7.1",
     "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.7.7",
+    "@types/jasminewd2": "^2.0.7",
+    "@types/node": "^12.7.8",
     "codelyzer": "^4.5.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
