--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cordova-plugin-appavailability": "^0.4.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-market": "^1.2.0",
+    "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.6.10",
     "ionic-cache": "^4.1.0",
     "ionicons": "^4.6.3",
@@ -110,7 +111,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "ios",
