--- a/angular.json
+++ b/angular.json
@@ -67,6 +67,14 @@
                 "maximumError": "5mb"
               }]
             },
+            "test": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.e2e.ts"
+                }
+              ]
+            },
             "ci": {
               "progress": false
             }
@@ -118,13 +126,7 @@
               "progress": false,
               "watch": false
             }
-          },
-          "fileReplacements": [
-            {
-              "replace": "src/environments/environment.ts",
-              "with": "src/environments/environment.e2e.ts"
-            }
-          ]
+          }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
