--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@ionic-native/app-availability": "^5.15.1",
     "@ionic-native/app-version": "^5.15.1",
     "@ionic-native/calendar": "^5.15.1",
@@ -74,6 +75,7 @@
     "@ionic/v4-migration-tslint": "^1.7.1",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
+    "@types/leaflet": "^1.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^4.5.0",
     "cordova-plugin-device": "^2.0.2",
