--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ branches:
       - master
 
 before_script:
+      - npm install -g ionic cordova
+      - ionic cordova platform add browser
       - export DISPLAY=:99.0
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - chmod +x ./cc-test-reporter
@@ -27,6 +29,17 @@ jobs:
       script: npm run test:onceAndCoverage
     - script: npm run e2e
       name: "E2E Tests"
+    - script: ionic cordova build browser --prod
+      name: "Build browser"
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  on:
+    branch: master
+  local_dir: www
