--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,19 @@ jobs:
         on:
           branch: master
         local_dir: www
+    - script: ionic cordova build android --prod
+      before_script:
+        - npm install -g ionic cordova
+        - ionic cordova platform add android
+      name: "Build Android"
+      deploy:
+        provider: pages
+        skip-cleanup: true
+        github-token: $GITHUB_TOKEN
+        keep-history: true
+        on:
+          branch: master
+        local_dir: platforms/android
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
