--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,9 @@ jobs:
         github-token: $GITHUB_TOKEN
         keep-history: true
         on:
+          repo: BenJneB/StudUCLouvain_ionic-v4
           branch: master
-        local_dir: platforms/android
+        file: "/home/travis/build/BenJneB/StudUCLouvain_ionic-v4/platforms/android/app/build/outputs/apk/*/*.apk"
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
