--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
         local_dir: www
     - script: ionic cordova build android --prod
       before_script:
-        - npm install -g ionic cordova
+        - npm install -g ionic cordova cordova-res
         - ionic cordova resources android
         - ionic cordova platform add android
       name: "Build Android"
