--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ env:
 
 language: node_js
 node_js: "12.12.0"
+android:
+  components:
+    - build-tools-26.0.2
+    - android-26
+    - extra
 dist: xenial
 services:
   - xvfb
