--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ language: node_js
 node_js: "12.12.0"
 android:
   components:
-    - build-tools-26.0.2
-    - android-26
-    - extra
+    - tools
+    - platform-tools
+    - build-tools-28.0.3
+    - android-28
+    - extra-android-m2repository
 dist: xenial
 services:
   - xvfb
