--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 env:
   global:
     - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
+    - ANDROID_API_LEVEL=28
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_ABI=armeabi-v7a
+jdk: oraclejdk8
 
 language: node_js
 node_js: "12.12.0"
@@ -61,6 +65,17 @@ jobs:
           repo: BenJneB/StudUCLouvain_ionic-v4
           branch: master
         file: "/home/travis/build/BenJneB/StudUCLouvain_ionic-v4/platforms/android/app/build/outputs/apk/*/*.apk"
+        before_cache:
+          - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+          - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+        cache:
+          directories:
+            - $HOME/.gradle/caches/
+            - $HOME/.gradle/wrapper/
+            - $HOME/.android/build-cache
+
+before_install:
+    #- touch $HOME/.android/repositories.cfg
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
