--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ services:
 addons:
   chrome: stable
   apt:
+    sources:
+      - sourceline: deb https://dl.yarnpkg.com/debian/ stable main
+        key_url: https://dl.yarnpkg.com/debian/pubkey.gpg
     packages:
       - oracle-java8-installer
       - oracle-java8-set-default
