--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,6 @@ android:
 dist: xenial
 services:
   - xvfb
-addons:
-  chrome: stable
-  apt:
-    sources:
-      - sourceline: deb https://dl.yarnpkg.com/debian/ stable main
-        key_url: https://dl.yarnpkg.com/debian/pubkey.gpg
-    packages:
-      - oracle-java8-installer
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -36,7 +28,15 @@ cache:
     - $HOME/.android/build-cache
 
 before_install:
-    #- touch $HOME/.android/repositories.cfg
+    - touch $HOME/.android/repositories.cfg
+addons:
+  chrome: stable
+  apt:
+    sources:
+      - sourceline: deb https://dl.yarnpkg.com/debian/ stable main
+        key_url: https://dl.yarnpkg.com/debian/pubkey.gpg
+    packages:
+      - oracle-java8-installer
 branches:
       only:
       - master
