--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ android:
     - build-tools-28.0.3
     - android-28
     - extra-android-m2repository
-dist: xenial
+dist: trusty
 services:
   - xvfb
 before_cache:
