--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ android:
     - build-tools-28.0.3
     - android-28
     - extra-android-m2repository
-dist: trusty
+dist: xenial
 services:
   - xvfb
 before_cache:
