--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ android:
     - platform-tools
     - build-tools-28.0.3
     - android-28
+    - extra
     - extra-android-m2repository
 dist: xenial
 services:
