--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
+    - ANDROID_HOME=${TRAVIS_BUILD_DIR}/android-sdk
+    - PATH=${ANDROID_HOME}/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}
 jdk: oraclejdk8
 
 language: node_js
@@ -30,6 +32,7 @@ cache:
     - $HOME/.android/build-cache
 
 before_install:
+    - cp -R /usr/local/android-sdk ./android-sdk
     - touch $HOME/.android/repositories.cfg
 addons:
   chrome: stable
