--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ env:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
-    - ANDROID_HOME=$HOME/android-sdk
-    - PATH=${ANDROID_HOME}/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}
+    - ANDROID_HOME=~/android-sdk
 dist: xenial
 services:
   - xvfb
