--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ android:
   components:
     - tools
     - platform-tools
+    - build-tools-28.0.3	
+    - android-28
     - extra
     - extra-android-m2repository
 env:
@@ -16,6 +18,7 @@ env:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
+    - ANDROID_HOME=~/android-sdk
 dist: xenial
 services:
   - xvfb
