--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ android:
     - android-28
     - extra
     - extra-android-m2repository
+  licenses:
+    - 'android-sdk-license-.+'
 env:
   global:
     - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
