--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_HOME=~/android-sdk
-dist: xenial
+dist: trusty
 services:
   - xvfb
 before_install:
