--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,13 @@ cache:
 
 addons:
   chrome: stable
+  apt:
+    sources:
+      - sourceline: deb https://dl.yarnpkg.com/debian/ stable main
+        key_url: https://dl.yarnpkg.com/debian/pubkey.gpg
+    packages:
+      - oracle-java8-installer
+      - oracle-java8-set-default
 branches:
       only:
       - master
