--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ jdk: oraclejdk8
 
 language: node_js
 node_js: "12.14.0"
+
 android:
   components:
     - tools
@@ -16,16 +17,19 @@ android:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+
 env:
   global:
     - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
-    - ANDROID_HOME=~/android-sdk
-dist: trusty
+    - ANDROID_HOME=$PWD/android-sdk-linux
+
+dist: xenial
 services:
   - xvfb
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -37,10 +41,7 @@ cache:
 
 addons:
   chrome: stable
-  apt:
-    packages:
-      - oracle-java8-installer
-      - oracle-java8-set-default
+
 branches:
       only:
       - master
