--- a/.travis.yml
+++ b/.travis.yml
@@ -64,35 +64,33 @@ jobs:
         - npm install -g ionic cordova
         - ionic cordova platform add browser
       name: "Build browser"
-      matrix:
-        include:
-          - language: android
-            dist: trusty
-            jdk: oraclejdk8
-            before_script: 
-              - cd Android
-            before_cache:
-              - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-              - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-            cache:
-              directories:
-                - $HOME/.gradle/caches/
-                - $HOME/.gradle/wrapper/
-                - $HOME/.android/build-cache
-            before_install:
-              - yes | sdkmanager "platforms;android-28"
-              - yes | sdkmanager 'cmake;3.6.4111459'
-              - yes | sdkmanager 'lldb;3.1'
+      language: android
+      dist: trusty
+      jdk: oraclejdk8
+      before_script: 
+        - cd Android
+      before_cache:
+        - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+        - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+      cache:
+        directories:
+          - $HOME/.gradle/caches/
+          - $HOME/.gradle/wrapper/
+          - $HOME/.android/build-cache
+      before_install:
+        - yes | sdkmanager "platforms;android-28"
+        - yes | sdkmanager 'cmake;3.6.4111459'
+        - yes | sdkmanager 'lldb;3.1'
 
-            android:
-                components:
-                    - tools
-                    - platform-tools
-                    - build-tools-28.0.3
-                    - android-28
-                    - extra-google-m2repository
-            script:
-                - ./gradlew clean check --profile
+      android:
+          components:
+              - tools
+              - platform-tools
+              - build-tools-28.0.3
+              - android-28
+              - extra-google-m2repository
+      script:
+          - ./gradlew clean check --profile
       deploy:
         provider: pages
         skip-cleanup: true
