--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,9 @@ jobs:
       script: npm run test:onceAndCoverage
     - script: npm run e2e
       name: "E2E Tests"
-    - script: ionic cordova build browser --prod
+    - script:
+        - ./gradlew clean check --profile
+        - ionic cordova build browser --prod
       before_script:
         - npm install -g ionic cordova
         - ionic cordova platform add browser
@@ -89,8 +91,6 @@ jobs:
               - build-tools-28.0.3
               - android-28
               - extra-google-m2repository
-      script:
-          - ./gradlew clean check --profile
       deploy:
         provider: pages
         skip-cleanup: true
