--- a/.travis.yml
+++ b/.travis.yml
@@ -80,28 +80,30 @@ jobs:
         - ionic cordova platform add android
         - cd Android
       name: "Build Android"
-      language: android
-      dist: trusty
-      jdk: oraclejdk8
-      before_cache:
-        - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-        - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-      cache:
-        directories:
-          - $HOME/.gradle/caches/
-          - $HOME/.gradle/wrapper/
-          - $HOME/.android/build-cache
-      before_install:
-        - yes | sdkmanager "platforms;android-28"
-        - yes | sdkmanager 'cmake;3.6.4111459'
-        - yes | sdkmanager 'lldb;3.1'
-      android:
-          components:
-              - tools
-              - platform-tools
-              - build-tools-28.0.3
-              - android-28
-              - extra-google-m2repository
+      matrix:
+        include:
+          - language: android
+            dist: trusty
+            jdk: oraclejdk8
+            before_cache:
+              - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+              - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+            cache:
+              directories:
+                - $HOME/.gradle/caches/
+                - $HOME/.gradle/wrapper/
+                - $HOME/.android/build-cache
+            before_install:
+              - yes | sdkmanager "platforms;android-28"
+              - yes | sdkmanager 'cmake;3.6.4111459'
+              - yes | sdkmanager 'lldb;3.1'
+            android:
+                components:
+                    - tools
+                    - platform-tools
+                    - build-tools-28.0.3
+                    - android-28
+                    - extra-google-m2repository
       deploy:
         provider: pages
         skip-cleanup: true
