--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ env:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
     - ANDROID_ABI=armeabi-v7a
+    - ANDROID_HOME=${PWD}/android-sdk-linux
 
 dist: xenial
 services:
@@ -75,7 +76,6 @@ jobs:
         local_dir: www
     - script: ionic cordova build android --prod
       before_script:
-        - find . -type d | grep android-sdk
         - npm install -g ionic cordova cordova-res
         - ionic cordova resources android
         - ionic cordova platform add android
@@ -116,12 +116,12 @@ jobs:
         on:
           repo: BenJneB/StudUCLouvain_ionic-v4
           branch: master
-before_deploy:
-  # start install android
-  - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
-  - tar -xzvf /sdk-tools-linux-433379.zip
-  - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
-  - export ANDROID_HOME=${PWD}/android-sdk-linux
+      before_deploy:
+        # start install android
+        - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
+        - tar -xzvf /sdk-tools-linux-433379.zip
+        - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
+        - export ANDROID_HOME=${PWD}/android-sdk-linux
   
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
