--- a/.travis.yml
+++ b/.travis.yml
@@ -76,36 +76,14 @@ jobs:
         local_dir: www
     - script: ionic cordova build android --prod
       before_script:
+        - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
+        - tar -xzvf /sdk-tools-linux-433379.zip
+        - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
+        - export ANDROID_HOME=${PWD}/android-sdk-linux
         - npm install -g ionic cordova cordova-res
         - ionic cordova resources android
         - ionic cordova platform add android
       name: "Build Android"
-      matrix:
-        include:
-          - language: android
-            dist: trusty
-            jdk: oraclejdk8
-            before_script:
-              - cd Android
-            before_cache:
-              - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-              - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-            cache:
-              directories:
-                - $HOME/.gradle/caches/
-                - $HOME/.gradle/wrapper/
-                - $HOME/.android/build-cache
-            before_install:
-              - yes | sdkmanager "platforms;android-28"
-              - yes | sdkmanager 'cmake;3.6.4111459'
-              - yes | sdkmanager 'lldb;3.1'
-            android:
-                components:
-                    - tools
-                    - platform-tools
-                    - build-tools-28.0.3
-                    - android-28
-                    - extra-google-m2repository
       deploy:
         provider: pages
         skip-cleanup: true
