--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
       - chmod +x ./cc-test-reporter
       - ./cc-test-reporter before-build
       - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
-      - tar -xzvf /sdk-tools-linux-433379.zip
+      - tar -xzvf /sdk-tools-linux-4333796.zip
       - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
       - export ANDROID_HOME=${PWD}/android-sdk-linux
 install:
