--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ jobs:
     - script: ionic cordova build android --prod
       before_script:
         - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
-        - tar -xzvf /sdk-tools-linux-4333796.zip
+        - unzip sdk-tools-linux-4333796.zip
         - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
         - export ANDROID_HOME=${PWD}/android-sdk-linux
         - npm install -g cordova-res
